force-app/main/default/objects/Room__c/fields/Bed_Count__c.field-meta.xml
<CustomField>
    <fullName>Bed_Count__c</fullName>
    <label>Bed Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>