force-app/main/default/objects/Room__c/fields/Bed_Size__c.field-meta.xml
<CustomField>
    <fullName>Bed_Size__c</fullName>
    <label>Bed Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queen</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Twin</fullName>
            </value>
            <value>
                <fullName>King</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>