force-app/main/default/objects/Room__c/fields/Conjoined__c.field-meta.xml
<CustomField>
    <fullName>Conjoined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conjoined</label>
    <type>Checkbox</type>
</CustomField>