force-app/main/default/objects/Room__c/fields/Conjoined_with__c.field-meta.xml
<CustomField>
    <fullName>Conjoined_with__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conjoined with</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>Conjoined_with</relationshipName>
    <type>Lookup</type>
</CustomField>