force-app/main/default/objects/Room__c/fields/Room_Style__c.field-meta.xml
<CustomField>
    <fullName>Room_Style__c</fullName>
    <label>Room Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Suite</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Extended Stay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>